data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2195.wast
;; 5. **Test 5: Loop with Conditional `br_table` Branching**    - Description: Implement a loop that conditionally branches using `br_table` instructions to different labels, some leading back to the loop start.    - Specific Constraint: Tests whether conditional branching within a loop is correctly managed to avoid infinite loops.    - Infinite Loop Relation: Mismanaged conditions can fail to exit the loop, resulting in an infinite loop.

(assert_invalid
  (module
    (func (result i32)
      (loop (result i32)
        (block (result i32)
          (i32.const 0)
          (br_table 0 1 (i32.const 1) (i32.const 2)) ;; Incorrect operand type for loop back
        )
      )
    )
  )
  "type mismatch"
)